# persimmon-rag-api

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  LOCAL_TEST_REPORT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_FIX_SUMMARY.md  README.md  SETUP_COMPLETE.md  SUPABASE_SETUP.md  nixpacks.toml  pyproject.toml  railway.toml  start.sh
app/: __init__.py  config.py  main.py
app/api/v1/: collections.py  embeddings.py  search.py  sources.py  webhooks.py
app/core/: auth.py  errors.py  logging_config.py  rate_limit.py
app/models/: collection.py  embedding.py  search.py  source.py  webhook.py
app/services/: ai_service.py  content_processor.py  embedding_service.py  supabase_service.py  webhook_service.py
docs/: AGENT_API_GUIDE.md  CHANGELOG.md
docs/examples/: curl_examples.sh  python_custom_agent.py  python_langchain_agent.py  typescript_agent.ts
migrations/: 000_initial_schema.sql  001_webhooks.sql
scripts/: validate_env.py
tests/: __init__.py  conftest.py  test_search.py  test_sources.py
